--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,3 +1,4 @@
+@import url('site.css');
 html {
   font-size: 14px;
 }
@@ -19,4 +20,9 @@ html {
 
 body {
   margin-bottom: 60px;
+}
+
+table td {
+    width: 80px;
+    height:80px;
 }
