--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,4 +1,5 @@
 @import url('site.css');
+@import url('site.css');
 html {
   font-size: 14px;
 }
@@ -25,4 +26,5 @@ body {
 table td {
     width: 80px;
     height:80px;
+    text-align:center;
 }
