Add visibility for things only for specific roles

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -41,6 +41,7 @@
 
             <button>gamestarted</button>
             <button>hit</button>
+            <button>update</button>
 
             <div id="debug-log"></div>
         </div>
