Add showing mysteries on Win

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,6 +6,7 @@
 
 <div id="win">
     <h1>You win!</h1>
+    <h2></h2>
 </div>
 
 <div id="lose">
@@ -42,6 +43,7 @@
             <button>gamestarted</button>
             <button>hit</button>
             <button>update</button>
+            <button>win</button>
 
             <div id="debug-log"></div>
         </div>
