Add selecting role on start

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -13,6 +13,12 @@
     <h1>You lose!</h1>
 </div>
 
+<div id="role">
+    <button id="bclairvoyant">Clairvoyant</button>
+    <button id="bscribe">Scribe</button>
+    <button id="bnavigator">Navigator</button>
+</div>
+
 <div class="container" id="main">
     <div class="row p-1">
         <div class="col-6 text-end">
