Add next levels generation

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -24,6 +24,7 @@
     <button>gamestarted</button>
     <button>win</button>
     <button>lose</button>
+    <button>next</button>
 
     <div id="debug-log"></div>
 </div>
