--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -17,7 +17,7 @@
 <div id="role">
     <button id="bclairvoyant">Clairvoyant</button>
     <button id="bscribe">Scribe</button>
-    <button id="navigator">Navigator</button>
+    <button id="bnavigator">Navigator</button>
 </div>
 
 <div id="debug" class="col-6">
@@ -25,6 +25,7 @@
     <button>win</button>
     <button>lose</button>
     <button>next</button>
+    <button>hit</button>
 
     <div id="debug-log"></div>
 </div>
