Add special actions

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -38,6 +38,8 @@
             <button class="action" data-val="2" id="west">West</button>
             <button class="action" data-val="3" id="south">South</button>
             <button class="action" data-val="4" id="rest">Rest</button>
+
+            <button class="action" data-val="5" id="special">Special</button>
         </div>
 
         <div id="voting">
